--- a/src/containers/Container.scss
+++ b/src/containers/Container.scss
@@ -1,29 +1,16 @@
 @import '../styles/variables.scss';
 
 .container {
-    height: 300vh;
     width: 100%;
+    margin: 0 auto;
     padding: 0;
     margin: 0;
     background-color: $colorPrimary;
-    display: grid;
+    display: flex;
 
-    .artwork-container {
-        width: 300px;
-        height: 300px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        background: $colorGrey;
-        padding: 10px;
-        margin: 30px;
-        border-radius: 10px;
-    }
-
-    .artwork-image {
-        height: 100%;
-        // max-width: 280px;
-        width: auto;
-        margin-bottom: 10px;
+    .section-container {
+        width: 100%;
+        max-width: 1440px;
+        margin: 0 auto;
     }
 }
