--- a/src/components/ArtworkImage.scss
+++ b/src/components/ArtworkImage.scss
@@ -1,8 +1,17 @@
 .artwork-image {
     width: 100%;
     overflow: hidden;
+    -webkit-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
+    box-shadow: 0px 3px 8px 3px rgb(0, 0, 0, 1);
+    border-radius: 3px;
 
     &-item {
         width: 100%;
+        transition: all 14s;
+
+        &:hover {
+            transform: scale(1.6);
+        }
     }
 }
