--- a/src/containers/Container.scss
+++ b/src/containers/Container.scss
@@ -11,6 +11,10 @@
     .section-container {
         width: 100%;
         max-width: 1440px;
-        margin: 0 auto;
+        margin: 30px auto 50px;
+        -webkit-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
+        -moz-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
+        box-shadow: 0px 10px 25px 10px rgb(0, 0, 0);
+        border-radius: 10px;
     }
 }
