--- a/src/containers/Navigation.scss
+++ b/src/containers/Navigation.scss
@@ -4,23 +4,49 @@
     width: 100%;
     height: 420px;
     display: flex;
-    background-color: $colorSecondary;
+    position: relative;
+    overflow: hidden;
 
-    .nav-list {
-        max-width: 1440px;
+    .nav-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .nav-container {
+        margin: auto 0 0;
         width: 100%;
-        display: flex;
-        align-items: flex-start;
-        margin: auto auto 30px;
-        padding: 0;
-        list-style-type: none;
+        background-color: rgba($colorSecondary, .85);
+        padding: 15px 0;
+        z-index: 1;
 
-        &-item {
-            padding: 0 40px;
-            font-size: 22px;
-            color: $colorPrimary;
-            text-transform: uppercase;
-            border-right: 3px solid $colorPrimary;
+        .nav-list {
+            max-width: 1440px;
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            margin: 0 auto;
+            padding: 0;
+            list-style-type: none;
+    
+    
+            &-item {
+                padding: 20px 40px;
+                font-size: 22px;
+                color: $colorPrimary;
+                text-transform: uppercase;
+                border-right: 3px solid $colorPrimary;
+                cursor: pointer;
+                transition: all .1s;
+
+                &:first-of-type {
+                    border-left: 3px solid $colorPrimary;
+                }
+
+                &:hover {
+                    color: rgba($colorPrimary, .5);
+                }
+            }
         }
     }
 }
