--- a/src/containers/sections/SectionGrid.scss
+++ b/src/containers/sections/SectionGrid.scss
@@ -1,41 +1,54 @@
 .section-grid {
     display: grid;
-    row-gap: 5px;
-    column-gap: 5px;
+    row-gap: 15px;
+    column-gap: 15px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    margin: 30px;
+    grid-template-rows: repeat(4, 1fr);
+    margin: 15px 30px;
 
     .artwork {
         width: auto;
         margin: 0;
 
-        &:nth-of-type(1),
-        &:nth-of-type(6),
-        &:nth-of-type(4),
-        &:nth-of-type(5) {
-            height: 605px;
-        }
-
         &:nth-of-type(1) {
-            grid-column: 1/4;
-            grid-row: 1/3;
+            grid-column: 1/3;
+            grid-row: 1/2;
         }
 
+        &:nth-of-type(2) {
+            grid-column: 3/4;
+            grid-row: 1/2;
+        }
+
+        &:nth-of-type(3) {
+            grid-column: 4/5;
+            grid-row: 1/2;
+        }
 
         &:nth-of-type(4) {
-            grid-column: 1/3;
-            grid-row: 3/5;
+            grid-column: 1/2;
+            grid-row: 2/3;
         }
 
         &:nth-of-type(5) {
-            grid-column: 3/5;
-            grid-row: 3/5;
+            grid-column: 1/2;
+            grid-row: 3/4;
         }
 
         &:nth-of-type(6) {
             grid-column: 2/5;
-            grid-row: 5/7;
+            grid-row: 2/4;
+            height: 915px;
+        }
+
+        &:nth-of-type(7) {
+            grid-column: 1/3;
+            grid-row: 4/5;
+        }
+
+        &:nth-of-type(8) {
+            grid-column: 3/5;
+            grid-row: 4/5;
         }
     }
 }
