--- a/src/containers/sections/section-three.scss
+++ b/src/containers/sections/section-three.scss
@@ -1,10 +1,11 @@
-.section-two {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+.section-three {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 
     .artwork {
         width: auto;
         margin: 0;
+        height: auto;
 
         &:nth-of-type(1) {
             grid-column: 1/2;
@@ -12,13 +13,18 @@
         }
 
         &:nth-of-type(2) {
+            grid-column: 2/3;
+            grid-row: 1/2;
+        }
+
+        &:nth-of-type(3) {
             grid-column: 1/2;
             grid-row: 2/3;
         }
 
-        &:nth-of-type(3) {
-            grid-column: 2/5;
-            grid-row: 1/4;
+        &:nth-of-type(4) {
+            grid-column: 2/3;
+            grid-row: 2/3;
         }
     }
 }
