--- a/src/containers/sections/section-two.scss
+++ b/src/containers/sections/section-two.scss
@@ -12,13 +12,19 @@
         }
 
         &:nth-of-type(2) {
-            grid-column: 1/2;
-            grid-row: 2/3;
+            grid-column: 2/3;
+            grid-row: 1/2;
         }
 
         &:nth-of-type(3) {
-            grid-column: 2/5;
-            grid-row: 1/4;
+            grid-column: 2/4;
+            grid-row: 2/4;
+            height: auto;
+        }
+
+        &:nth-of-type(4) {
+            grid-column: 4/5;
+            grid-row: 2/3;
         }
     }
 }
