--- a/src/containers/sections/styles/section-a.scss
+++ b/src/containers/sections/styles/section-a.scss
@@ -1,9 +1,10 @@
-.section-two {
-    grid-template-columns: repeat(3, 1fr);
+.section-a {
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto 1fr;
 
     @media screen and (min-width: 1024px) {
         grid-template-columns: repeat(4, 1fr);
+
     }
 
     .artwork {
@@ -12,43 +13,33 @@
 
         &:nth-of-type(1) {
             grid-column: 1/3;
-            grid-row: 1/3;
+            grid-row: 1/2;
+            height: auto;
 
             @media screen and (min-width: 1024px) {
-                grid-column: 1/2;
-                grid-row: 1/2;
+                grid-column: 1/3;
+                grid-row: 1/4;
+                height: auto;
             }
         }
 
         &:nth-of-type(2) {
-            grid-column: 2/4;
-            grid-row: 3/4;
+            grid-column: 1/2;
+            grid-row: 2/3;
 
             @media screen and (min-width: 1024px) {
-                grid-column: 2/3;
+                grid-column: 3/4;
                 grid-row: 1/2;
             }
         }
 
         &:nth-of-type(3) {
-            grid-column: 2/4;
-            grid-row: 2/4;
-            height: auto;
-
-            @media screen and (min-width: 1024px) {
-                grid-column: 2/4;
-                grid-row: 2/4;
-                height: auto;
-            }
-        }
-
-        &:nth-of-type(4) {
-            grid-column: 4/5;
+            grid-column: 2/3;
             grid-row: 2/3;
 
             @media screen and (min-width: 1024px) {
                 grid-column: 4/5;
-                grid-row: 2/3;
+                grid-row: 1/2;
             }
         }
     }
