--- a/src/containers/sections/styles/section-c.scss
+++ b/src/containers/sections/styles/section-c.scss
@@ -1,10 +1,9 @@
-.section-one {
-    grid-template-columns: repeat(2, 1fr);
+.section-c {
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto 1fr;
 
     @media screen and (min-width: 1024px) {
         grid-template-columns: repeat(4, 1fr);
-
     }
 
     .artwork {
@@ -14,32 +13,42 @@
         &:nth-of-type(1) {
             grid-column: 1/3;
             grid-row: 1/2;
-            height: auto;
 
             @media screen and (min-width: 1024px) {
-                grid-column: 1/3;
-                grid-row: 1/4;
-                height: auto;
+                grid-column: 1/2;
+                grid-row: 1/2;
             }
         }
 
         &:nth-of-type(2) {
-            grid-column: 1/2;
+            grid-column: 2/4;
             grid-row: 2/3;
 
             @media screen and (min-width: 1024px) {
-                grid-column: 3/4;
+                grid-column: 2/3;
                 grid-row: 1/2;
             }
         }
 
         &:nth-of-type(3) {
-            grid-column: 2/3;
-            grid-row: 2/3;
+            grid-column: 1/3;
+            grid-row: 3/4;
+            height: auto;
+
+            @media screen and (min-width: 1024px) {
+                grid-column: 2/4;
+                grid-row: 2/4;
+                height: auto;
+            }
+        }
+
+        &:nth-of-type(4) {
+            grid-column: 1/4;
+            grid-row: 4/5;
 
             @media screen and (min-width: 1024px) {
                 grid-column: 4/5;
-                grid-row: 1/2;
+                grid-row: 2/3;
             }
         }
     }
