--- a/src/containers/styles/container.scss
+++ b/src/containers/styles/container.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables.scss';
+@import '../../styles/variables.scss';
 
 .container {
     width: 100%;
@@ -11,10 +11,14 @@
     .section-container {
         width: 100%;
         max-width: 1440px;
-        margin: 30px auto 50px;
+        margin: 30px 15px 50px;
         -webkit-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
         -moz-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
         box-shadow: 0px 10px 25px 10px rgb(0, 0, 0);
         border-radius: 10px;
+
+        @media screen and (min-width: 1024px) {
+            margin: 30px auto 50px;
+        }
     }
 }
