--- a/src/components/styles/artwork-data.scss
+++ b/src/components/styles/artwork-data.scss
@@ -1,11 +1,31 @@
+@import '../../styles/variables.scss';
+
 .artwork-data {
     display: flex;
-    gap: 10px;
 
     &-type,
     &-year,
-    &-space {
+    &-point {
         font-size: 14px;
-        opacity: .6;
+        color: rgba($colorSecondary, .6);
+        border-right: 2px solid rgba($colorSecondary, .6);
+        padding: 0 10px;
+        text-align: left;
+        cursor: pointer;
+
+        // &:hover {
+        //     color: $colorSecondary;
+        // }
+    }
+
+    &-type {
+        padding: 0 10px 0 0;
+    }
+
+    &-point {
+        border: none;
+        text-overflow: ellipsis;
+        overflow: hidden; 
+        white-space: nowrap;
     }
 }
