--- a/src/components/styles/artwork-image.scss
+++ b/src/components/styles/artwork-image.scss
@@ -1,5 +1,9 @@
+@import '../../styles/variables.scss';
+
 .artwork-image {
     width: 100%;
+    display: flex;
+    position: relative;
     overflow: hidden;
     -webkit-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
@@ -8,5 +12,28 @@
 
     &-item {
         width: 100%;
+        transition: all .6s;
+    }
+
+    &-buttons {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: flex;
+        // transform: translateX(-50%);
+
+        .btn-left,
+        .btn-right {
+            cursor: pointer;
+            padding: 6px 15px;
+            background-color: rgba($colorPrimary, .6);
+            color: $colorSecondary;
+            // border-radius: 10px;
+        }
+
+        .btn-left {
+            border-right: 2px solid $colorSecondary;
+            border-top-left-radius: 6px;
+        }
     }
 }
