--- a/src/containers/artwork/styles/artwork.scss
+++ b/src/containers/artwork/styles/artwork.scss
@@ -1,14 +1,13 @@
 @import '../../../styles/variables.scss';
 
 .artwork {
-    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 10px;
     margin: 30px;
 
     .artwork-info {
+        width: 100%;
         margin: 20px 0 0;
         color: $colorSecondary;
     }
