--- a/src/containers/sections/styles/section-a.scss
+++ b/src/containers/sections/styles/section-a.scss
@@ -4,28 +4,24 @@
 
     @media screen and (min-width: 1024px) {
         grid-template-columns: repeat(4, 1fr);
-
     }
 
     .artwork {
-        width: auto;
         margin: 0;
 
         &:nth-of-type(1) {
             grid-column: 1/3;
-            grid-row: 1/2;
-            height: auto;
+            grid-row: 1/3;
 
             @media screen and (min-width: 1024px) {
                 grid-column: 1/3;
                 grid-row: 1/4;
-                height: auto;
             }
         }
 
         &:nth-of-type(2) {
             grid-column: 1/2;
-            grid-row: 2/3;
+            grid-row: 3/4;
 
             @media screen and (min-width: 1024px) {
                 grid-column: 3/4;
@@ -35,7 +31,7 @@
 
         &:nth-of-type(3) {
             grid-column: 2/3;
-            grid-row: 2/3;
+            grid-row: 3/4S;
 
             @media screen and (min-width: 1024px) {
                 grid-column: 4/5;
