creating kategories, typescript context issue to solve

--- a/src/containers/styles/navigation.scss
+++ b/src/containers/styles/navigation.scss
@@ -31,7 +31,7 @@
             align-items: flex-start;
             margin: 0 auto;
             list-style-type: none;
-            visibility: hidden;
+            // visibility: hidden;
     
             &-item {
                 width: max-content;
