--- a/src/components/styles/artwork-title.scss
+++ b/src/components/styles/artwork-title.scss
@@ -1,3 +1,7 @@
 .artwork-title {
     font-size: 20px;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
