--- a/src/containers/styles/container.scss
+++ b/src/containers/styles/container.scss
@@ -11,14 +11,15 @@
     .section-container {
         width: 100%;
         max-width: 1440px;
-        margin: 30px 15px 50px;
-        -webkit-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
-        -moz-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
-        box-shadow: 0px 10px 25px 10px rgb(0, 0, 0);
-        border-radius: 10px;
+        // margin: 30px 15px 50px;
+        
 
         @media screen and (min-width: 1024px) {
             margin: 30px auto 50px;
+            -webkit-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
+            -moz-box-shadow: 0px 10px 25px 10px rgba(255, 255, 255, 1);
+            box-shadow: 0px 10px 25px 10px rgb(0, 0, 0);
+            border-radius: 10px;
         }
     }
 }
