--- a/src/containers/styles/navigation.scss
+++ b/src/containers/styles/navigation.scss
@@ -53,7 +53,10 @@
                     padding: 2px 12px;
                 }
 
-                &:hover {
+                &:hover,
+                &:focus,
+                &:active,
+                &:focus-visible {
                     color: rgba($colorSecondary, .5);
                 }
             }
