--- a/src/components/styles/loader.scss
+++ b/src/components/styles/loader.scss
@@ -1,12 +1,33 @@
 @import '../../styles/variables.scss';
 
 .loader {
-    position: absolute;
-    top: 0;
-    left: 0;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     width: 100%;
-    background-color: red;
+    background-color: $colorPrimary;
     color: white;
     z-index: 10;
+    padding: 60px 0;
+    margin: 0 auto;
+    flex: 0 0 100%;
+
+    &-spinner {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 8px solid $colorPrimary;
+        border-top-color: $colorSecondary;
+        animation: loading 1s linear infinite;
+    }
 }
+
+@keyframes loading {
+    to {
+      transform: rotate(360deg);
+    }
+  }
