--- a/src/containers/category/styles/category.scss
+++ b/src/containers/category/styles/category.scss
@@ -1,7 +1,7 @@
 .category {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: auto 1fr;
+    grid-template-rows: repeat(1, 1fr);
     column-gap: 15px;
     row-gap: 15px;
     margin: 15px;
