--- a/src/containers/styles/footer.scss
+++ b/src/containers/styles/footer.scss
@@ -6,10 +6,38 @@
     &-container {
         margin: 0 15px;
         padding: 25px 0;
+        max-width: 1440px;
+
+        @media screen and (min-width: 1024px) {
+            margin: 0 auto;
+        }
     }
 
     &-list {
         list-style-type: none;
+
         
+        .item-header {
+            width: 100%;
+            margin-bottom: 10px;
+            overflow: hidden;
+            font-size: 20px;
+            color: white;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        .item-link {
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            
+            a {
+                text-decoration: none;
+                color: $colorSecondary;
+                letter-spacing: 2.5px;
+                margin-bottom: 5px;
+            }
+        }
     }
 }
