--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $colorPrimary: #242424;
-$colorSecondary: #dbc188;
+$colorSecondary: #c2a031;
+$colorTertiary: rgb(226, 199, 48);
 
 $colorGrey: #444444
