--- a/src/components/styles/artwork-image.scss
+++ b/src/components/styles/artwork-image.scss
@@ -7,8 +7,9 @@
     overflow: hidden;
     -webkit-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
-    box-shadow: 0px 3px 8px 3px rgb(0, 0, 0, 1);
+    box-shadow: 0px 2px 9px 7px rgb(0, 0, 0, 1);
     border-radius: 3px;
+    cursor: pointer;
 
     &-item {
         width: 100%;
