--- a/src/components/styles/artwork-title.scss
+++ b/src/components/styles/artwork-title.scss
@@ -1,7 +1,10 @@
+@import '../../styles/variables.scss';
+
 .artwork-title {
     font-size: 20px;
     width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    color: $colorPrimary;
 }
