--- a/src/containers/sections/styles/section-grid.scss
+++ b/src/containers/sections/styles/section-grid.scss
@@ -1,7 +1,21 @@
 .section-grid {
     display: grid;
-    row-gap: 15px;
-    column-gap: 15px;
-    margin: 15px;
+    row-gap: 30px;
+    column-gap: 30px;
+    padding: 30px 30px 0;
     overflow: hidden;
+
+    &:last-of-type {
+        padding-bottom: 30px;
+    }
+
+    @media screen and (min-width: 1024px) {
+        row-gap: 40px;
+        column-gap: 40px;
+        padding: 40px 40px 0;
+
+        &:last-of-type {
+            padding-bottom: 40px;
+        }
+    }
 }
