--- a/src/containers/styles/container.scss
+++ b/src/containers/styles/container.scss
@@ -11,8 +11,7 @@
     .section-container {
         width: 100%;
         max-width: 1440px;
-        // margin: 30px 15px 50px;
-        
+        background-color: $colorSecondary;  
 
         @media screen and (min-width: 1024px) {
             margin: 30px auto 50px;
