add single art view

--- a/src/components/styles/artwork-data.scss
+++ b/src/components/styles/artwork-data.scss
@@ -7,8 +7,8 @@
     &-year,
     &-point {
         font-size: 14px;
-        color: rgba($colorPrimary, .6);
-        border-right: 2px solid rgba($colorPrimary, .6);
+        color: rgba($colorSecondary, .6);
+        border-right: 2px solid rgba($colorSecondary, .6);
         padding: 0 10px;
         text-align: left;
         cursor: pointer;
