--- a/src/components/styles/artwork-image.scss
+++ b/src/components/styles/artwork-image.scss
@@ -5,9 +5,8 @@
     display: flex;
     position: relative;
     overflow: hidden;
-    -webkit-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 1);
-    box-shadow: 0px 2px 9px 7px rgb(0, 0, 0, 1);
+    // box-shadow: 10px 20px 35px 10px rgb(0, 0, 0);
+    border: 1px solid $colorSecondary;
     border-radius: 3px;
     cursor: pointer;
 
