--- a/src/components/styles/artwork-title.scss
+++ b/src/components/styles/artwork-title.scss
@@ -6,5 +6,5 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    color: $colorPrimary;
+    color: $colorSecondary;
 }
