--- a/src/containers/sections/styles/section-grid.scss
+++ b/src/containers/sections/styles/section-grid.scss
@@ -12,7 +12,7 @@
     @media screen and (min-width: 1024px) {
         row-gap: 40px;
         column-gap: 40px;
-        padding: 40px 40px 0;
+        padding: 40px 0;
 
         &:last-of-type {
             padding-bottom: 40px;
