--- a/src/containers/styles/container.scss
+++ b/src/containers/styles/container.scss
@@ -7,6 +7,7 @@
     margin: 0;
     background-color: $colorPrimary;
     display: flex;
+    padding-top: 100px;
 
     .section-container {
         width: 100%;
