--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,2 @@
-$colorPrimary: #242424;
-$colorSecondary: #c2a031;
-$colorTertiary: rgb(226, 199, 48);
-
-$colorGrey: #444444
+$colorPrimary: #e6d6ab;
+$colorSecondary: #74544a;
