--- a/src/components/styles/artwork-data.scss
+++ b/src/components/styles/artwork-data.scss
@@ -11,7 +11,7 @@
         border-right: 2px solid rgba($colorSecondary, .6);
         padding: 0 10px;
         text-align: left;
-        cursor: pointer;
+        // cursor: pointer;
     }
 
     &-type {
