--- a/src/components/styles/artwork-image.scss
+++ b/src/components/styles/artwork-image.scss
@@ -5,7 +5,6 @@
     display: flex;
     position: relative;
     overflow: hidden;
-    // box-shadow: 10px 20px 35px 10px rgb(0, 0, 0);
     border: 1px solid $colorSecondary;
     border-radius: 3px;
     cursor: pointer;
@@ -17,12 +16,13 @@
 
     &-buttons {
         position: absolute;
-        bottom: 0;
-        right: 0;
+        bottom: 10px;
+        left: 50%;
         display: flex;
         flex-direction: row;
         height: 40px;
-        width: 100%;
+        width: 25%;
+        transform: translateX(-50%);
 
         .btn-left,
         .btn-right {
@@ -31,14 +31,16 @@
             align-items: center;
             cursor: pointer;
             padding: 6px 5px;
-            background-color: rgba($colorPrimary, .2);
+            background-color: $colorPrimary;
             height: 100%;
             text-align: center;
             transition: all .2s;
             color: $colorSecondary;
+            border: 1px solid $colorSecondary;
 
             &:hover {
-                background-color: rgba($colorPrimary, .6);
+                background-color: $colorSecondary;
+                color: $colorPrimary;
             }
 
             .direction {
@@ -47,11 +49,22 @@
         }
 
         .btn-left {
-            border-right: 1px solid $colorPrimary;
+            border-top-left-radius: 200px;
+            border-bottom-left-radius: 200px;
+
+            .btn-counter {
+                margin-right: 10px;
+            }
         }
 
         .btn-right {
             border-left: 1px solid $colorPrimary;
+            border-top-right-radius: 200px;
+            border-bottom-right-radius: 200px;
+
+            .btn-counter {
+                margin-left: 10px;
+            }
         }
     }
 }
